force-app/main/default/objects/FS_EmailAddressForRSSJDE__c/FS_EmailAddressForRSSJDE__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Email Address For RSS &amp; JDE Install Base</description>
    <label>Email Address For RSS &amp; JDE Install Base</label>
</CustomObject>