force-app/main/default/objects/FS_EmailAddressForRSSJDE__c/fields/FS_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Email_Address__c</fullName>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>