force-app/main/default/objects/FS_EmailAddressForRSSJDE__c/fields/FS_InstallBase__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Base User</label>
    <type>Checkbox</type>
</CustomField>