force-app/main/default/objects/FS_EmailAddressForRSSJDE__c/fields/FS_RSS__c.field-meta.xml
<CustomField>
    <fullName>FS_RSS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for RSS</description>
    <label>RSS User</label>
    <type>Checkbox</type>
</CustomField>